15 March 2012: Wouter
	- configure windows detects GetAdaptersAdresses (XP and later).
	- snapshot for test.
	- Fix compatibility with VirtualBox on Windows, that messes with the
	  network adapters.  Solution works on windows XP and later (detected
	  by configure).
	- Fix trayicon on windows high DPI settings to look better.

13 March 2012: Wouter
	- self update work.

12 March 2012: Wouter
	- self update work.

9 March 2012: Wouter
	- update osx config to new config template.
	- login-command and login-location man page entries.
	- windows shows browser on login.
	- debug prints removed from http.

8 March 2012: Wouter
	- OSX GUI for no web access dialog.
	- OSX update dnssec-trigger.conf with new url settings.
	- OSX fix the double-window shown bug, bug in NSWindow deminiaturize func.
	- open web browser to login to a hot spot.

7 March 2012: Wouter
	- print syntax error for url config items.
	- skip_http control command.
	- raise dialog to top on GTK.
	- GTK gui for hot spot sign on.
	- workon windows GUI for no web hot spot sign on.

6 March 2012: Wouter
	- Fix memleak in new config url content.
	- Fix probe count when http is done.
	- probe logic that keeps track of http_insecure mode.
	- retry every 10 seconds for 5 minutes in http_insecure mode.
	- fix test_tcp, test_ssl, unsafe commands.
	- fix to show failed address lookups in probe results.

5 March 2012: Wouter
	- distinguish 2xx, 3xx and other (404) http rcodes.
	- config file contains the expected content of the urls.
	- ssl can list multiple hashes (for certificate rollover).

2 March 2012: Wouter
	- http check is performed, nonblocking.  Lookup of addres(es), A, AAAA
	  to the (up to 5) DHCP DNS resolvers.  3 urls are checked, until one
	  connects, then it checks content.  IP4 and IP6, until first works.
	- url for ster.nlnetlabs.nl and fedoraproject.org added in config.
	- absolute sbindir in netconfig hooks.

23 Feb 2012: Wouter
	- fedora package files updated.

22 Feb 2012: Wouter